using UnityEditor;
using UnityEngine;

internal class AnimationStrings
{
	internal static string IsMoving = "IsMoving";
	internal static string IsRuning = "IsRuning";
	internal static string isGrounded = "isGrounded";
	internal static string yVelocity = "yVelocity";
	internal static string jumpTriger = "jump";
	internal static string isOnWall = "isOnWall";
	internal static string isOnCeiling = "isOnCeiling";
	internal static string attackTriger = "attack";
	internal static string canMove = "canMove";
	internal static string hasTarget = "hasTarget";
	internal static string isAlive = "isAlive";
	internal static string isHit = "isHit";
	internal static string hitTrigger = "hit";
	internal static string lockVelocity = "lockVelocity";
	internal static string attackCooldown = "attackCooldown";
	internal static string rangedAttackTriger = "rangAttacked";
	

}